3.0.0-M6
* Bump up to 3.0.0-M6

* Update Jobdef.java

* Create JobResource.java

* Rename jobdef

* Fix naming issues

* Fix namings

* Update Condition.java

* Fix naming issues

* Cleaning

* To LF

* Reformat

* Add job creation context

* Add process name filter

* Update index.html

* Update JobResource.java

* Update swagger

* Add validation for duration.

Positive or zero check.

* Update TimeRange.java

Validation range can specified.

* Update TimeRange.java

* Update TimeRange.java

* Add duration range validator

* 3.0.0-M6 jobdef service (#13)

* Create AppTimeService.java

* Add named value

* Create ValidationService.java

* Update service

* Add jobdef build processing

* m_appconf design

* JSON to simple

* Create JsonServiceTest.java

* Add tests

* Update JobdefDxoTest.java

* Update JsonConvertor.java

* Clean up

* Update JobResource.java

* Update JobResource.java

* Update JobdefService.java

* Now Job value creating

* Update JobValue.java

* Create job-value

* Update JsonValueUtils.java

* Add JSON schemas

* Add schedule definition schema

* Fix json schema

* Update PersistableValue.java

* Update PersistableValue.java

* Add trnsdef

* Update TrnsdefValue.java

* Update TrnsdefValue.java

* Update FiltdefValue.java

* trns and filt definition to nullable

* Create SchedefKing.java

* Update trnsdef.schema.json

* Update database.ods

* Update schedef.schema.json

* Update SchedefValue.java

* Update SchedefValue.java

* Update SchedefValue.java

* Update SchedefValue.java

* Update schedef.schema.json

* Split job schedule definition schema

* Update schedule-trigger.schema.json

* Rename constants of schedule trigger kind

* Update ScheduleTriggerKing.java

* Create ScheduleTriggerValue.java

* Fix issues

* Update FilteringConditionTest.java

* Move

* Optimize

* Update ScheduleTriggerValue.java

* revert

* Optimize

* Update ScheduleTriggerValue.java

* Fix array ordering issues

* Update ScheduleTriggerValue.java

* fix

* Rename
